// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiTablePagination is rendered 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
>
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
  >
    <div
      class="euiPopover euiPopover--anchorUpRight euiPopover--withTitle"
    >
      <div
        class="euiPopover__anchor"
      >
        <button
          class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiButtonEmpty--iconRight"
          data-test-subj="tablePaginationPopoverButton"
          type="button"
        >
          <span
            class="euiButtonEmpty__content"
          >
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiIcon-isLoading euiButtonEmpty__icon"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            />
            <span
              class="euiButtonEmpty__text"
            >
              Rows per page: 50
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
  >
    <div
      class="euiPagination"
      role="group"
    >
      <button
        aria-label="Previous page"
        class="euiButtonIcon euiButtonIcon--text"
        data-test-subj="pagination-button-previous"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
      <button
        aria-label="Page 1 of 5"
        class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiPaginationButton euiPaginationButton--hideOnMobile"
        data-test-subj="pagination-button-0"
        type="button"
      >
        <span
          class="euiButtonEmpty__content"
        >
          <span
            class="euiButtonEmpty__text"
          >
            1
          </span>
        </span>
      </button>
      <button
        aria-label="Page 2 of 5"
        class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiPaginationButton euiPaginationButton-isActive euiPaginationButton--hideOnMobile"
        data-test-subj="pagination-button-1"
        type="button"
      >
        <span
          class="euiButtonEmpty__content"
        >
          <span
            class="euiButtonEmpty__text"
          >
            2
          </span>
        </span>
      </button>
      <button
        aria-label="Page 3 of 5"
        class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiPaginationButton euiPaginationButton--hideOnMobile"
        data-test-subj="pagination-button-2"
        type="button"
      >
        <span
          class="euiButtonEmpty__content"
        >
          <span
            class="euiButtonEmpty__text"
          >
            3
          </span>
        </span>
      </button>
      <button
        aria-label="Page 4 of 5"
        class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiPaginationButton euiPaginationButton--hideOnMobile"
        data-test-subj="pagination-button-3"
        type="button"
      >
        <span
          class="euiButtonEmpty__content"
        >
          <span
            class="euiButtonEmpty__text"
          >
            4
          </span>
        </span>
      </button>
      <button
        aria-label="Page 5 of 5"
        class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiPaginationButton euiPaginationButton--hideOnMobile"
        data-test-subj="pagination-button-4"
        type="button"
      >
        <span
          class="euiButtonEmpty__content"
        >
          <span
            class="euiButtonEmpty__text"
          >
            5
          </span>
        </span>
      </button>
      <button
        aria-label="Next page"
        class="euiButtonIcon euiButtonIcon--text"
        data-test-subj="pagination-button-next"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`EuiTablePagination is rendered when hiding the per page options 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
>
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
  />
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
  >
    <div
      class="euiPagination"
      role="group"
    >
      <button
        aria-label="Previous page"
        class="euiButtonIcon euiButtonIcon--text"
        data-test-subj="pagination-button-previous"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
      <button
        aria-label="Page 1 of 5"
        class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiPaginationButton euiPaginationButton--hideOnMobile"
        data-test-subj="pagination-button-0"
        type="button"
      >
        <span
          class="euiButtonEmpty__content"
        >
          <span
            class="euiButtonEmpty__text"
          >
            1
          </span>
        </span>
      </button>
      <button
        aria-label="Page 2 of 5"
        class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiPaginationButton euiPaginationButton-isActive euiPaginationButton--hideOnMobile"
        data-test-subj="pagination-button-1"
        type="button"
      >
        <span
          class="euiButtonEmpty__content"
        >
          <span
            class="euiButtonEmpty__text"
          >
            2
          </span>
        </span>
      </button>
      <button
        aria-label="Page 3 of 5"
        class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiPaginationButton euiPaginationButton--hideOnMobile"
        data-test-subj="pagination-button-2"
        type="button"
      >
        <span
          class="euiButtonEmpty__content"
        >
          <span
            class="euiButtonEmpty__text"
          >
            3
          </span>
        </span>
      </button>
      <button
        aria-label="Page 4 of 5"
        class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiPaginationButton euiPaginationButton--hideOnMobile"
        data-test-subj="pagination-button-3"
        type="button"
      >
        <span
          class="euiButtonEmpty__content"
        >
          <span
            class="euiButtonEmpty__text"
          >
            4
          </span>
        </span>
      </button>
      <button
        aria-label="Page 5 of 5"
        class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiPaginationButton euiPaginationButton--hideOnMobile"
        data-test-subj="pagination-button-4"
        type="button"
      >
        <span
          class="euiButtonEmpty__content"
        >
          <span
            class="euiButtonEmpty__text"
          >
            5
          </span>
        </span>
      </button>
      <button
        aria-label="Next page"
        class="euiButtonIcon euiButtonIcon--text"
        data-test-subj="pagination-button-next"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
  </div>
</div>
`;
